Add a view for retrieving books

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -6,4 +6,5 @@ disable = [
     "interfacer", # deprecated
     "maligned", # deprecated
     "scopelint", # deprecated
+    "exhaustivestruct",
   ]
